Refactored in terms of shards and slots